# rede_social-python

./: .gitignore  .vercelignore  pyproject.toml  requirements.txt  vercel.json
src/: authenticaion.py
src/api/: application.py  authentication.py  configuration.py  index.py
src/api/exception/: user.py
src/api/routes/: home.py  post.py  users.py
src/datalayer/: dbconfig.py
src/datalayer/models/: post.py  user.py
src/services/: post.py  user.py
